[package]
name = "destiny_accounts"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[dependencies]
destiny_model = { path = "../../common-rust/destiny-model" }

golem-rust = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = "1.16.0"
wit-bindgen-rt = { workspace = true }

[package.metadata.component.bindings]

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies]
"destiny:common" = { path = "wit-generated/deps/destiny" }
"destiny:accounts-exports" = { path = "wit-generated/deps/destiny_accounts-exports" }
