[package]
name = "destiny_store"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[dependencies]
destiny_model = { path = "../../common-rust/destiny-model" }

golem-rust = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }

[package.metadata.component.bindings]

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies]
"destiny:store-exports" = { path = "wit-generated/deps/destiny_store-exports" }
# See https://github.com/bytecodealliance/cargo-component/blob/main/src/metadata.rs#L62

# derives = ["serde::Serialize", "serde::Deserialize"]
# generate_unused_types = true