[package]
name = "destiny_store"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[dependencies]
destiny_model = { path = "../../common-rust/destiny-model" }

golem-rust = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }

[package.metadata.component.bindings]
# See https://github.com/bytecodealliance/cargo-component/blob/main/src/metadata.rs#L62
# derives = ["serde::Serialize", "serde::Deserialize"]
# generate_unused_types = true

[package.metadata.component.bindings.with]
"destiny:common/types" = "destiny_model::destiny::common::types"
[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "wit-generated/deps/io" }
"wasi:clocks" = { path = "wit-generated/deps/clocks" }
"golem:rpc" = { path = "wit-generated/deps/wasm-rpc" }
"destiny:common" = { path = "wit-generated/deps/destiny" }
"destiny:accounts-exports" = { path = "wit-generated/deps/destiny_accounts-exports" }
"destiny:accounts-client" = { path = "wit-generated/deps/destiny_accounts-client" }
"destiny:store-exports" = { path = "wit-generated/deps/destiny_store-exports" }
