[package]
name = "destiny_ui"
version = "0.0.1"
edition = "2021"

[package.metadata]

[package.metadata.component]

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies]
"destiny:ui-exports" = { path = "wit-generated/deps/destiny_ui-exports" }

[[bin]]
name = "ui"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[dependencies]
destiny_model = { path = "../../common-rust/destiny-model" }

dioxus = { version = "0.6.0", features = ["router"], optional = true }
reqwest = { version = "0.12.14", features = ["json"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }

wit-bindgen-rt = { workspace = true, optional = true }

[features]
default = ["web"]
component = ["dep:wit-bindgen-rt"]
web = ["dioxus/web", "dep:dioxus", "dep:reqwest"]
